# -*- makefile -*-

AUTOMAKE_OPTIONS = foreign

include $(top_builddir)/Make.rules

EXTRA_DIST = $(PSF_FILES) $(CP_FILES)

pkgdatadir = $(datadir)/$(FONTDIR)

pkgdata_DATA = $(PSF_FILES:=.$(COMPRESSOR_EXT)) $(CP_FILES)

CLEANFILES = $(PSF_FILES:=.$(COMPRESSOR_EXT))

CP_FILES = \
161.cp 162.cp 163.cp 164.cp 165.cp 737.cp 880.cp 972.cp

PSF_FILES = \
Agafari-12.psf Agafari-14.psf Agafari-16.psf \
\
Goha-12.psf Goha-14.psf Goha-16.psf \
GohaClassic-12.psf GohaClassic-14.psf GohaClassic-16.psf \
\
Cyr_a8x14.psf Cyr_a8x16.psf Cyr_a8x8.psf \
\
LatArCyrHeb-08.psf LatArCyrHeb-14.psf LatArCyrHeb-16+.psf LatArCyrHeb-16.psf \
LatArCyrHeb-19.psf \
\
Mik_8x16.psf alt-8x14.psf alt-8x16.psf alt-8x8.psf \
altb-8x16.psf altc-8x16.psf aply16.psf \
\
cp850-8x14.psf cp850-8x16.psf cp850-8x8.psf \
cp865-8x14.psf cp865-8x16.psf cp865-8x8.psf \
cp866-8x16.psf \
\
def2_8x16.psf default8x16.psf default8x9.psf \
\
gr.f14.psf gr.f16.psf gr8x14.psf \
gr8x16.psf gr8x6.psf gr8x7.psf gr8x8.psf greek.psf \
\
gr737-8x8-2.psf gr737-8x8.psf gr737-9x14-2.psf gr737-9x14.psf \
gr737-9x16-2.psf gr737-9x16-medieval.psf gr737-9x16.psf \
\
grcourier.psf grfixed.psf \
\
iso01.f08.psf iso01.f14.psf iso01.f16.psf \
iso01a-8x14.psf iso01a-8x16.psf iso01a-8x8.psf \
iso02.f08.psf iso02.f14.psf iso02.f16.psf \
iso03.f08.psf iso03.f14.psf iso03.f16.psf \
iso04.f08.psf iso04.f14.psf iso04.f16.psf \
iso05.f08.psf iso05.f14.psf iso05.f16.psf \
iso06.f08.psf iso06.f14.psf iso06.f16.psf \
iso07.f08.psf iso07.f14.psf iso07.f16.psf \
iso08.f08.psf iso08.f14.psf iso08.f16.psf \
iso09.f08.psf iso09.f14.psf iso09.f16.psf \
iso10.f08.psf iso10.f14.psf iso10.f16.psf \
iso14.f16.psf \
\
koi8-14.psf \
koi8-8x14.psf koi8-8x16.psf koi8-8x8.psf \
koi8b-8x16.psf koi8c-8x16.psf \
koi8r-8x8.psf \
koi8u_8x14.psf koi8u_8x16.psf koi8u_8x8.psf \
\
ruscii_8x14.psf ruscii_8x16.psf ruscii_8x8.psf \
\
lat1-08.psf lat1-10.psf lat1-12.psf lat1-14.psf lat1-16.psf \
lat1u-08.psf lat1u-10.psf lat1u-12.psf lat1u-14.psf lat1u-16.psf \
lat2-08.psf lat2-10.psf lat2-12.psf lat2-14.psf lat2-16.psf \
lat2u-16.psf \
lat4-08.psf lat4-10.psf lat4-12.psf lat4-14.psf lat4-16+.psf lat4-16.psf lat4-19.psf \
lat4u-08.psf lat4u-10.psf lat4u-12.psf lat4u-14.psf lat4u-16+.psf lat4u-16.psf lat4u-19.psf \
lat4a-08.psf lat4a-10.psf lat4a-12.psf lat4a-14.psf lat4a-16+.psf lat4a-16.psf lat4a-19.psf \
lat7-14.psf \
\
lat0-sun16.psf lat2-sun16.psf  \
\
lat0-08.psf lat0-10.psf lat0-12.psf lat0-14.psf lat0-16.psf \
\
arm8.psf \
\
t.psf t850b.psf tcvn8x16.psf viscii10-8x16.psf
