dnl Process this file with autoconf to produce a configure script.
AC_INIT(Strn.h)
AC_CONFIG_HEADER(config.h)
wi_ARG_ENABLE_DEBUG



dnl ---------------------------------------------------------------------------
dnl Environment and compiler settings.
dnl ---------------------------------------------------------------------------
dnl
wi_ENV_VAR_MESSAGES
wi_OS_VAR
AC_PROG_CC
AC_PROG_LN_S
wi_CFLAGS
AC_OBJEXT
AC_EXEEXT



dnl ---------------------------------------------------------------------------
dnl Checks for header files.
dnl ---------------------------------------------------------------------------
dnl
AC_HEADER_STDC
dnl Needs strings.h for AIX
AC_CHECK_HEADERS(string.h strings.h sys/types.h unistd.h)



dnl ---------------------------------------------------------------------------
dnl Checks for typedefs, structures, and compiler characteristics.
dnl ---------------------------------------------------------------------------
dnl
AC_C_CONST
AC_TYPE_SIZE_T



dnl ---------------------------------------------------------------------------
dnl Checks for library functions.
dnl ---------------------------------------------------------------------------
dnl
AC_CHECK_FUNCS(strdup)
wi_SNPRINTF



dnl ---------------------------------------------------------------------------
dnl Checks for system characteristics.
dnl ---------------------------------------------------------------------------
dnl
wi_PROG_RANLIB
wi_PROG_AR
wi_PROG_CCDV_NO_CREATE
CPPFLAGS="-I. $CPPFLAGS"
wi_BEAUTIFY_ENVIRONMENT_VARIABLES
wi_PROG_TAR
wi_CREATE_TAR_FILES



dnl ---------------------------------------------------------------------------
dnl Version lookups for Makefile variables.
dnl ---------------------------------------------------------------------------
dnl
changequote(<<, >>)dnl
STRN_VERSION=`sed -n '/gStrnLibVersion\[\]/{
	s/^[^0-9]*//
	s/\".*$//
	p
	q
}' Strncpy.c`
changequote([, ])dnl



dnl ---------------------------------------------------------------------------
dnl Create Makefiles and config.h files.
dnl ---------------------------------------------------------------------------
dnl
AC_SUBST(CC)
AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(LIBS)
AC_SUBST(SFLAG)
AC_SUBST(DEFS)
AC_SUBST(MAKE)
AC_SUBST(STRN_VERSION)
AC_OUTPUT(Makefile)
